Fix: update pom.xml — replace JPA/MySQL with MongoDB reactive + Playwright
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>